# diy_robotarm_wer24_driver

./: Dockerfile  README.md  dev.Dockerfile  run.sh  run_dev.sh
config/: esp32_controller.yaml
launch/: controller.launch.py
src/diy_robotarm_wer24_driver/: CMakeLists.txt  cmake_copy  esp32_interface_plugin.xml  package.xml
src/diy_robotarm_wer24_driver/config/: esp32_controller copy.yaml  esp32_controller.yaml
src/diy_robotarm_wer24_driver/incl/: esp32_hardware_interface.hpp
src/diy_robotarm_wer24_driver/include/esp32_robot_driver/: data_format.hpp  esp32_interface.hpp  esp32_interface_old.hpp  helpers.hpp  robot_connection.hpp
src/diy_robotarm_wer24_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/diy_robotarm_wer24_driver/install/diy_robotarm_wer24_driver/include/esp32_robot_driver/: data_format.hpp  robot_connection.hpp
src/diy_robotarm_wer24_driver/install/diy_robotarm_wer24_driver/share/diy_robotarm_wer24_driver/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
src/diy_robotarm_wer24_driver/install/diy_robotarm_wer24_driver/share/diy_robotarm_wer24_driver/config/: esp32_controller.yaml
src/diy_robotarm_wer24_driver/install/diy_robotarm_wer24_driver/share/diy_robotarm_wer24_driver/incl/: DataFormat.hpp  RobotConnection.hpp  esp32_hardware_interface.hpp  visibility_control.h
src/diy_robotarm_wer24_driver/launch/: controller.launch.py  controller.launch_copy.py  visualize.launch.py
src/diy_robotarm_wer24_driver/log/: latest_build
src/diy_robotarm_wer24_driver/src/: esp32_interface.cpp
src/diy_robotarm_wer24_driver/test/: test_load_esp32_interface.cpp
(+2 files in other folders)
